src/index.css
/*App level styling*/
body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-size: 15px;
  letter-spacing: 1px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
}

@media screen and (max-width: 768px) {
  body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 15px;
    letter-spacing: 1px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow: scroll;
  }
}

html {
  height: 100%;
}

#root {
  height: 100%;
  background-color: #08AEEA;
  background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
}

/* .section {
	padding: 50px 0;
} */

/* .section .heading {
	text-align: center;
	padding-bottom: 10px;
	width: 100%;
} */

.resumeBtn {
	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
	box-shadow: 0px 10px 18px 1px #0d1c05;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #7dff37));
	background:-moz-linear-gradient(top, #89e05a 5%, #7dff37 100%);
	background:-webkit-linear-gradient(top, #89e05a 5%, #7dff37 100%);
	background:-o-linear-gradient(top, #89e05a 5%, #7dff37 100%);
	background:-ms-linear-gradient(top, #89e05a 5%, #7dff37 100%);
	background:linear-gradient(to bottom, #89e05a 5%, #7dff37 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#7dff37',GradientType=0);
	background-color:#89e05a;
	-moz-border-radius:26px;
	-webkit-border-radius:26px;
	border-radius:26px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:'Jua', sans-serif;
	font-size:15px;
	padding:10px 15px;
	text-decoration:none;
	text-shadow:0px 1px 0px #000000;
}
.resumeBtn:hover {
	cursor:pointer;
	color:#ffffff;
  text-decoration:none;
	text-shadow:0px 1px 0px #000000;
}
.resumeBtn:active {
	position:relative;
	top:2px;
}


/* Navigation styling--------------------------------------->*/
.navigation{
  width: 100%;
  font-family: 'Jua', sans-serif;
  font-size: 1.4rem;
  background-image: linear-gradient(180deg, #24eaa4 0%, #24eaa4 100%);
}

.navigation a {
  padding: 10px 20px;
  color: white;
  letter-spacing: 3px;
  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
}

.navigation a:hover {
  text-decoration: none;  
}

.active {
  font-size: 1.8rem;
}

/*Welcome page style--------------------------------------------->*/
.content {
  position: relative;
  top: 80%;
  text-align: center;
  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
}

.content::before {
  color: white;
  content: "I'm";
  font-size: 1.5rem;
  font-family: 'Jua', sans-serif;
  letter-spacing: 4px;
}

h1 {
  color:white;
  text-shadow: 0px 4px 2px rgba(0,0,0,0.4),
               0px 8px 13px rgba(0,0,0,0.2),
               0px 18px 23px rgba(0,0,0,0.1);
  letter-spacing: 8px;
  font-weight: 700;
  font-size: 4em;
  font-family: 'Jua', sans-serif;
}

.usp{
  font-family: 'Ubuntu Mono', monospace;
  font-size: 1.7em;
  letter-spacing: 6px;
}

.greetings {
  border: 8px solid;
  padding: 15px 15px 50px 15px;
  position: absolute;
  font-weight: 700;
  top: 35px;
  left: 50%;
  margin-left: -140px;
  border-radius: 15px;
  box-shadow: 0px 4px 6px 0px #0d1c05;
}

.greetings-icon {
  position: absolute;
  border-radius: 50%;
  left: 50%;
  margin-left: -1.8rem;
  padding: 5px;
  top: 120px;
  border: none;
  font-size: 55px;
  animation: iconBlink 3.2s infinite;

}

.greetings-icon:hover {
  cursor: pointer;
  box-shadow: 0px 4px 15px 4px #0d1c05;
}

@keyframes iconBlink {
  from { box-shadow: 0px 4px 10px 2px #0d1c05; }
  50% { box-shadow: 0px 4px 15px 4px #0d1c05; }
  to { box-shadow: 0px 4px 10px 2px #0d1c05; }
}

.morning{
  border-color: #FF512F;  /* fallback for old browsers */
  color: #FF512F;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
}

.noon {
  border-color: #F2994A;  /* fallback for old browsers */
  color: #F2994A;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
}

.evening {
  border-color: #ff7e5f;
  color: #ff7e5f;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
}

.night {
  border-color: #2c3e50;
  color: #2c3e50;
  text-shadow: 0px 4px 4px rgba(100, 100, 100, 0.5);
}

/* About page styling--------------------------------->*/

.intro{
  background-color: #EB3349;
  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  margin: 20px;
  color: white;
  text-align: center;
  border-radius: 15px;
  font-family: 'Jua', sans-serif;
  box-shadow: 2px 8px 4px 0px #0d1c05;
  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
}

.card{
  box-shadow: 0px 10px 18px 1px #0d1c05;
  border: 0;
  padding-left: 0;
  padding-right:0;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 20px;
}

.avatar {
  max-width: 100%;
  border-radius: inherit;
}

.textColor{
  color: #5e003e;
  margin-left: 30px;
}

/* Routing animation ------------------------------------->*/

.page {
  position: absolute;
  left: 15px;
  right: 15px;
  padding: 80px 0 50px 0;
}

.page-enter {
  opacity: 0;
  transform: scale(1.1);
}

.page-enter-active {
  opacity: 1;
  transform: scale(1);
  transition: opacity 300ms, transform 300ms;
}

.page-exit {
  opacity: 1;
  transform: scale(1);
}

.page-exit-active {
  opacity: 0;
  transform: scale(0.9);
  transition: opacity 300ms, transform 300ms;
}


/*About page children styling---------------------------------->*/

.renderAbout {
  width: 100%;
  height: 100%;
}

@media screen and (max-width: 480px){
  .renderAbout {
    width: 100%;
    height: 20em;
  }
}

.renderAbout-enter {
  opacity: 0;
}
.renderAbout-enter-active {
  opacity: 1;
  transition: opacity 900ms
}
.renderAbout-exit {
  opacity: 0;
}
.renderAbout-exit-active {
  opacity: 1;
  transition: opacity 900ms
}

